packages/parser/test/parser/E0156.txt
loop i := 0 i < 10; i++ {}
===== err =====
anonymous:1:12: ParseError: E0156 - Expected semicolon after loop statement initializer
1 | loop i := 0 i < 10; i++ {}
  |            ^
